--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,13 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Datatypes
+*.h5
+*.csv
+*.mat
+*.tif
+*.png
+*.jpg
+*.txt
+!requirements.txt
